fix: resolve input shown on ios

--- a/src/css/index.css
+++ b/src/css/index.css
@@ -29,6 +29,8 @@
   outline: none;
   color: var(--black);
   background-color: var(--white);
+  border-radius: 0;
+  margin: 0;
 }
 
 .field-input {
@@ -53,8 +55,7 @@
   font-size: 24px;
 }
 
-.field-btn:focus + .field-input,
-.field-input:focus {
+.field-btn.open + .field-input {
   padding-left: 12px;
   width: 260px;
 }
